force-app/main/default/objects/RGC_CDA_Tracker__c/RGC_CDA_Tracker__c.object-meta.xml
<CustomObject>
    <label>RGC CDA Tracker</label>
    <nameField>
        <label>RGC CDA Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RGC CDA Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>