force-app/main/default/objects/RGC_CDA_Tracker__c/fields/Confidentiality_Tail_Post_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Tail_Post_Expiration__c</fullName>
    <label>Confidentiality Tail Post Expiration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>