force-app/main/default/objects/RGC_CDA_Tracker__c/fields/iCertis_Number__c.field-meta.xml
<CustomField>
    <fullName>iCertis_Number__c</fullName>
    <label>iCertis Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>