force-app/main/default/objects/RGC_CDA_Tracker__c/fields/Link_to_CDA__c.field-meta.xml
<CustomField>
    <fullName>Link_to_CDA__c</fullName>
    <label>Link to CDA</label>
    <type>Url</type>
</CustomField>