force-app/main/default/objects/RGC_CDA_Tracker__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <length>3276</length>
    <type>LongTextArea</type>
</CustomField>