force-app/main/default/objects/RGC_CDA_Tracker__c/fields/Term_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Term_Expiration__c</fullName>
    <label>Term/Expiration</label>
    <length>200</length>
    <type>Text</type>
</CustomField>