force-app/main/default/objects/RGC_CDA_Tracker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Status__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Purpose__c</columns>
    <columns>Term_Expiration__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>